--- a/references.qmd
+++ b/references.qmd
@@ -1,2 +1,7 @@
 https://www.youtube.com/watch?v=_VGJIPRGTy4&ab_channel=PositPBC
 
+color palette: 
+https://colormagic.app/palette/671c38d353d1e2a13ca7ee06 
+
+images: 
+https://www.thenewhumanitarian.org/feature/2021/2/25/then-and-now-25-years-of-aid-worker-insecurity
