--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -21,15 +21,9 @@
    "metadata": {},
    "source": [
     "## Data Source & Description \n",
-    "\n",
     "**Source:**\n",
-    "The data for this analysis was sourced from the Aid Worker Security Database [@aidworkersecurity]."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The data for this analysis was sourced from the Aid Worker Security Database [@aidworkersecurity].\n",
+    "\n",
     "## Load and Preview Data"
    ]
   },
