--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -5,14 +5,16 @@
    "metadata": {},
    "source": [
     "---\n",
-    "format:\n",
-    "    html:\n",
-    "        embed-resources: true\n",
+    "title: \"Data Cleaning\"\n",
+    "bread-crumbs: true\n",
+    "sidebar: false\n",
+    "author: \"crg123\"\n",
+    "date: \"2025-04-07\"\n",
     "toc: true\n",
-    "title: Data Cleaning\n",
-    "bibliography: references.bib\n",
-    "author: crg123\n",
-    "date: 3/28/25\n",
+    "format:\n",
+    "  html:\n",
+    "    embed-resources: true\n",
+    "bibliography: \"references.bib\"\n",
     "---"
    ]
   },
@@ -23,7 +25,8 @@
     "## Data Source & Description \n",
     "**Source:**\n",
     "The data for this analysis was sourced from the Aid Worker Security Database [@aidworkersecurity].\n",
-    "\n",
+    "3,950 ROWS\n",
+    "unit of analysis = \n",
     "## Load and Preview Data"
    ]
   },
@@ -265,7 +268,7 @@
    ],
    "source": [
     "# Load data\n",
-    "df = pd.read_csv(\"data/security_incidents.csv\")\n",
+    "df = pd.read_csv(\"data/raw_data/security_incidents.csv\")\n",
     "df.head()"
    ]
   },
@@ -765,6 +768,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "# Dictionary to replace accented characters with plain equivalents\n",
     "replacements = {\n",
     "    \"é\": \"e\",\n",
@@ -778,7 +783,7 @@
     "}\n",
     "\n",
     "\n",
-    "# Replace accented characters in each cell\n",
+    "# Replace accented characters\n",
     "def replace_accents(text):\n",
     "    if isinstance(text, str):\n",
     "        for accented_char, replacement in replacements.items():\n",
@@ -793,15 +798,17 @@
     "unwanted_chars = ['\"', \",\"]\n",
     "\n",
     "\n",
-    "# Remove unwanted punctuation from strings\n",
+    "# Clean unwanted characters and remove anything in parentheses\n",
     "def clean_location_text(text):\n",
     "    if isinstance(text, str):\n",
     "        for char in unwanted_chars:\n",
     "            text = text.replace(char, \"\")\n",
+    "        # Remove \"(near)\" and anything similar in parentheses\n",
+    "        text = re.sub(r\"\\s*\\(.*?\\)\", \"\", text)\n",
     "    return text\n",
     "\n",
     "\n",
-    "# Clean only city, district, and region columns\n",
+    "# Apply cleaning to city, district, and region columns\n",
     "for col in [\"city\", \"district\", \"region\"]:\n",
     "    df[col] = df[col].apply(clean_location_text)"
    ]
@@ -1390,7 +1397,7 @@
    "outputs": [],
    "source": [
     "# Save to a CSV file\n",
-    "df.to_csv(\"data/cleaned_security_incidents.csv\", index=False)"
+    "df.to_csv(\"data/clean_data/cleaned_security_incidents.csv\", index=False)"
    ]
   }
  ],
