--- a/llm-usage.qmd
+++ b/llm-usage.qmd
@@ -1,1 +1,4 @@
-hey 
+
+FOR  help cusotmizing the leafly map 
+for help with the photos on the main page, html formatting 
+copilot help me come up with a catchy/good title 
