--- a/references.bib
+++ b/references.bib
@@ -5,3 +5,63 @@
   url = {https://www.aidworkersecurity.org/incidents},
   note = {Accessed: 3/16/2025}
 }
+
+@misc{gisf2025,
+  author       = {Westbury, Paul},
+  title        = {Gaps in Security Risk Management},
+  year         = {2025},
+  month        = {February},
+  day          = {24},
+  publisher    = {Global Interagency Security Forum},
+  url          = {https://gisf.ngo/blogs/gaps-in-security-risk-management/},
+}
+
+@misc{hpn2025, 
+  author       = {Jha, Rajeev},
+  title        = {Frontline workforce: challenges, contributions and the path forward},
+  year         = {2025},
+  month        = {March},
+  day          = {6},
+  publisher    = {Humanitarian Practice Network (HPN)},
+  url          = {https://odihpn.org/publication/frontline-workforce-challenges-contributions-and-the-path-forward/},
+}
+
+@misc{notatarget,
+  author       = {Yazdi, Pedram},
+  title        = {"Then and Now: 25 years of aid worker (in)security"},
+  year         = {2021},
+  month        = {February},
+  day          = {21},
+  url          = {https://assets.thenewhumanitarian.org/s3fs-public/styles/responsive_large/public/aid-worker-security-timeline-final.jpg.webp?itok=w2xvsL4i}, % Replace with actual URL if available
+  note         = {Photo by The New Humanitarian (2021)}
+}
+
+@misc{unhcr2017,
+  author       = {UNHCR},
+  title        = {Global Trends: Forced Displacement in 2016},
+  year         = {2017},
+  month        = {August},
+  day          = {18},
+  publisher    = {United Nations High Commissioner for Refugees},
+  url          = {https://www.unhcr.org/sites/default/files/styles/standard_08/public/legacy-images/5996b1ad3.webp?h=f2790038&itok=qrjpBjnc&t=1669739186},
+  note         = {Photo by UNHCR (2017)}
+}
+
+@misc{worldvision, 
+  author       = {World Vision},
+  title        = {Five things you may not know about humanitarians},
+  publisher    = {World Vision International},
+  url          = {https://www.wvi.org/sites/default/files/inline-images/W030-0668-011.jpg}, 
+  note         = {Photo by World Vision (undated)}
+}
+
+@misc{icrc2016,
+  author       = {Sobecki, Nichole},
+  title        = {South Sudan: Parliament passes bill limiting foreign-aid workers amid humanitarian crisis},
+  year         = {2016},
+  month        = {February},
+  day          = {05},
+  publisher    = {International Business Times},
+  url          = {https://www.ibtimes.co.uk/south-sudan-parliament-passes-bill-limiting-foreign-aid-workers-amid-humanitarian-crisis-1542128#slideshow/1487482},
+  note         = {Photo by ICRC (2016)}
+}
